Added Flattening and Merging code cells

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 .DS_Store
 IS453 Group Assignment - Application Data.csv
 IS453 Group Assignment - Bureau Data.csv
+IS453 Group Assignment - Bureau Data.xlsx
+IS453_Group_Assignment_Bureau_Flattened.csv
+IS453_Group_Assignment_Merged_Data.csv
+
