--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ IS453 Group Assignment - Bureau Data.xlsx
 IS453_Group_Assignment_Bureau_Flattened.csv
 IS453_Group_Assignment_Merged_Data.csv
 
+venv
+venv/
